rename known_time to knowledge_time; rename series to get_series; use main reabse-energy repo for colab; notebooks: check whether in colab

--- a/examples/nb_02_units_validation.ipynb
+++ b/examples/nb_02_units_validation.ipynb
@@ -20,7 +20,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "import urllib.request\nurllib.request.urlretrieve(\n    'https://raw.githubusercontent.com/rebase-energy/timedb/colab/examples/colab_setup.py',\n    '/tmp/colab_setup.py'\n)\nexec(open('/tmp/colab_setup.py').read())"
+   "source": [
+    "try:\n",
+    "    import google.colab\n",
+    "    import urllib.request\n",
+    "    urllib.request.urlretrieve(\n",
+    "        'https://raw.githubusercontent.com/rebase-energy/timedb/main/examples/colab_setup.py',\n",
+    "        '/tmp/colab_setup.py'\n",
+    "    )\n",
+    "    exec(open('/tmp/colab_setup.py').read())\n",
+    "except ImportError:\n",
+    "    pass  # Not running in Google Colab\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -87,7 +98,7 @@
     "        \"valid_time\": times,\n",
     "        \"value\": pd.array(values, dtype=f\"pint[{unit}]\"),\n",
     "    })\n",
-    "    td.series(name).insert(df)\n",
+    "    td.get_series(name).insert(df)\n",
     "\n",
     "print(\"Inserted 3 series with pint units\")"
    ]
@@ -113,14 +124,14 @@
    ],
    "source": [
     "# Read back without pint (default) — plain float64\n",
-    "df_plain = td.series(\"power\").read()\n",
+    "df_plain = td.get_series(\"power\").read()\n",
     "print(\"Default read (plain float64):\")\n",
     "print(f\"  dtype: {df_plain['value'].dtype}\")\n",
     "print(f\"  head: {df_plain['value'].head(3).tolist()}\")\n",
     "print()\n",
     "\n",
     "# Read back with as_pint=True — pint dtype\n",
-    "df_pint = td.series(\"power\").read(as_pint=True)\n",
+    "df_pint = td.get_series(\"power\").read(as_pint=True)\n",
     "print(\"Read with as_pint=True:\")\n",
     "print(f\"  dtype: {df_pint['value'].dtype}\")\n",
     "print(f\"  head: {df_pint['value'].head(3).tolist()}\")"
@@ -157,10 +168,10 @@
     "    \"value\": pd.array([500.0] * 24, dtype=\"pint[kW]\"),\n",
     "})\n",
     "\n",
-    "td.series(\"power\").insert(df_kw)\n",
+    "td.get_series(\"power\").insert(df_kw)\n",
     "\n",
     "# Read back — should show 0.5 MW (500 kW converted)\n",
-    "df_check = td.series(\"power\").read(\n",
+    "df_check = td.get_series(\"power\").read(\n",
     "    start_valid=new_times[0],\n",
     "    end_valid=new_times[0] + timedelta(hours=1)\n",
     ")\n",
@@ -197,7 +208,7 @@
     "    \"valid_time\": [base_time + timedelta(hours=48)],\n",
     "    \"value\": [999.0],  # plain float, no pint\n",
     "})\n",
-    "td.series(\"power\").insert(df_plain)\n",
+    "td.get_series(\"power\").insert(df_plain)\n",
     "print(\"Plain float64 insert: OK (no unit check)\")\n",
     "\n",
     "# Dimensionless pint — treated as series unit\n",
@@ -205,7 +216,7 @@
     "    \"valid_time\": [base_time + timedelta(hours=49)],\n",
     "    \"value\": pd.array([42.0], dtype=\"pint[dimensionless]\"),\n",
     "})\n",
-    "td.series(\"power\").insert(df_dimless)\n",
+    "td.get_series(\"power\").insert(df_dimless)\n",
     "print(\"Pint dimensionless insert: OK (treated as MW)\")"
    ]
   },
@@ -242,7 +253,7 @@
     "})\n",
     "\n",
     "try:\n",
-    "    td.series(\"power\").insert(df_mwh)\n",
+    "    td.get_series(\"power\").insert(df_mwh)\n",
     "    print(\"Unexpected: should have failed\")\n",
     "except IncompatibleUnitError as e:\n",
     "    print(f\"Rejected: {type(e).__name__}\")\n",
@@ -264,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timedb",
+   "display_name": "timedb (3.14.2)",
    "language": "python",
    "name": "python3"
   },
