--- a/examples/nb_03_forecast_revisions.ipynb
+++ b/examples/nb_03_forecast_revisions.ipynb
@@ -7,7 +7,7 @@
     "### Forecast Revisions with TimeDB\n",
     "\n",
     "This notebook demonstrates overlapping forecast revisions:\n",
-    "1. Creating multiple forecasts for the same series with different `known_time`\n",
+    "1. Creating multiple forecasts for the same series with different `knowledge_time`\n",
     "2. Reading all revisions with `read(versions=True)`\n",
     "3. Visualizing how forecasts evolve over time"
    ]
@@ -17,7 +17,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "import urllib.request\nurllib.request.urlretrieve(\n    'https://raw.githubusercontent.com/rebase-energy/timedb/colab/examples/colab_setup.py',\n    '/tmp/colab_setup.py'\n)\nexec(open('/tmp/colab_setup.py').read())"
+   "source": [
+    "try:\n",
+    "    import google.colab\n",
+    "    import urllib.request\n",
+    "    urllib.request.urlretrieve(\n",
+    "        'https://raw.githubusercontent.com/rebase-energy/timedb/main/examples/colab_setup.py',\n",
+    "        '/tmp/colab_setup.py'\n",
+    "    )\n",
+    "    exec(open('/tmp/colab_setup.py').read())\n",
+    "except ImportError:\n",
+    "    pass  # Not running in Google Colab\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -74,7 +85,7 @@
     "    description='Observation power values (ground truth)'\n",
     ")\n",
     "\n",
-    "for s in td.series().list_series():\n",
+    "for s in td.get_series().list_series():\n",
     "    print(f\"  {s['name']}: unit={s['unit']}  overlapping={s['overlapping']}  labels={s['labels']}\")"
    ]
   },
@@ -84,7 +95,7 @@
    "source": [
     "## Part 2: Create 4 Forecasts with Shifting Valid Times\n",
     "\n",
-    "Each forecast has a 3-day (72h) horizon starting at its `known_time`, with forecasts issued 1 day apart. Forecast error grows with lead time — early hours are accurate, later hours diverge."
+    "Each forecast has a 3-day (72h) horizon starting at its `knowledge_time`, with forecasts issued 1 day apart. Forecast error grows with lead time — early hours are accurate, later hours diverge."
    ]
   },
   {
@@ -106,14 +117,14 @@
     "observations = np.clip(80 + 40 * np.sin(2 * np.pi * np.arange(144) / 24 - np.pi / 2) + np.random.normal(0, 3, 144), 0, None)\n",
     "\n",
     "for i in range(4):\n",
-    "    known_time = base_valid_time + timedelta(days=i)\n",
+    "    knowledge_time = base_valid_time + timedelta(days=i)\n",
     "    np.random.seed(42 + i)\n",
     "    forecast = np.round(observations[i*24:i*24+72] + np.random.normal(0, 1 + 0.3 * np.arange(72)), 2)\n",
-    "    td.series(\"forecast\").where(type='power_forecast', model='sinus_with_error').insert(\n",
-    "        df=pd.DataFrame({\"valid_time\": [known_time + timedelta(hours=j) for j in range(72)], \"value\": forecast}),\n",
-    "        known_time=known_time)\n",
+    "    td.get_series(\"forecast\").where(type='power_forecast', model='sinus_with_error').insert(\n",
+    "        df=pd.DataFrame({\"valid_time\": [knowledge_time + timedelta(hours=j) for j in range(72)], \"value\": forecast}),\n",
+    "        knowledge_time=knowledge_time)\n",
     "\n",
-    "td.series(\"flat\").where(type='power_observation').insert(\n",
+    "td.get_series(\"flat\").where(type='power_observation').insert(\n",
     "    df=pd.DataFrame({\"valid_time\": [base_valid_time + timedelta(hours=i) for i in range(144)], \"value\": np.round(observations, 2)}))\n",
     "print(\"Inserted 4 forecast batches + 144 hours of observations\")"
    ]
@@ -125,7 +136,7 @@
     "## Part 3: Read Latest Forecast Revisions\n",
     "\n",
     "Now we'll read back the latest forecast revisions using `td.read()`.\n",
-    "This returns the latest forecast for each valid_time (most recent based on known_time) in a single query.\n",
+    "This returns the latest forecast for each valid_time (most recent based on knowledge_time) in a single query.\n",
     "The observations are recorded in a separate series."
    ]
   },
@@ -244,11 +255,11 @@
     "end_valid = base_valid_time + timedelta(hours=144)\n",
     "\n",
     "# Read latest forecast and observations\n",
-    "df_forecast = td.series(\"forecast\").where(\n",
+    "df_forecast = td.get_series(\"forecast\").where(\n",
     "    type='power_forecast', model='sinus_with_error'\n",
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
-    "df_observation = td.series(\"flat\").where(\n",
+    "df_observation = td.get_series(\"flat\").where(\n",
     "    type='power_observation'\n",
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
@@ -299,7 +310,7 @@
     "## Part 4: Read All Forecast Revisions (Overlapping Mode)\n",
     "\n",
     "Now let's read all forecast revisions using `.read(versions=True)` on the series collection.\n",
-    "This returns all forecasts with both `known_time` and `valid_time`, showing how\n",
+    "This returns all forecasts with both `knowledge_time` and `valid_time`, showing how\n",
     "forecasts evolve over time. This is useful for analyzing forecast revisions and backtesting."
    ]
   },
@@ -312,7 +323,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Forecast: (288, 1)  index=['known_time', 'valid_time']\n",
+      "Forecast: (288, 1)  index=['knowledge_time', 'valid_time']\n",
       "Observation:   (144, 1)  index=valid_time\n",
       "\n"
      ]
@@ -342,7 +353,7 @@
        "      <th>value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>known_time</th>\n",
+       "      <th>knowledge_time</th>\n",
        "      <th>valid_time</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -379,7 +390,7 @@
       ],
       "text/plain": [
        "                                                     value\n",
-       "known_time                valid_time                      \n",
+       "knowledge_time                valid_time                      \n",
        "2025-01-01 00:00:00+00:00 2025-01-01 00:00:00+00:00  45.79\n",
        "                          2025-01-01 01:00:00+00:00  42.38\n",
        "                          2025-01-01 02:00:00+00:00  49.33\n",
@@ -394,13 +405,13 @@
     }
    ],
    "source": [
-    "# Read all forecast revisions with (known_time, valid_time) multi-index\n",
-    "df_forecast_overlapping = td.series(\"forecast\").where(\n",
+    "# Read all forecast revisions with (knowledge_time, valid_time) multi-index\n",
+    "df_forecast_overlapping = td.get_series(\"forecast\").where(\n",
     "    type='power_forecast', model='sinus_with_error'\n",
     ").read(start_valid=start_valid, end_valid=end_valid, versions=True)\n",
     "\n",
     "# Read observations (flat)\n",
-    "df_observation_overlapping = td.series(\"flat\").where(\n",
+    "df_observation_overlapping = td.get_series(\"flat\").where(\n",
     "    type='power_observation'\n",
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
@@ -430,13 +441,13 @@
     "fig, ax = plt.subplots(figsize=(14, 6))\n",
     "\n",
     "# Plot each forecast revision in a distinct color\n",
-    "unique_known_times = df_forecast_overlapping.index.get_level_values(\"known_time\").unique()\n",
+    "unique_knowledge_times = df_forecast_overlapping.index.get_level_values(\"knowledge_time\").unique()\n",
     "colors = ['#1f77b4', '#ff7f0e', '#9467bd', '#17becf']\n",
     "\n",
-    "for idx, known_time in enumerate(unique_known_times):\n",
-    "    forecast_data = df_forecast_overlapping.xs(known_time, level=\"known_time\")\n",
+    "for idx, knowledge_time in enumerate(unique_knowledge_times):\n",
+    "    forecast_data = df_forecast_overlapping.xs(knowledge_time, level=\"knowledge_time\")\n",
     "    values = forecast_data['value'].astype(float)\n",
-    "    label = f\"Forecast {idx+1} ({known_time.strftime('%b %d %H:%M')})\"\n",
+    "    label = f\"Forecast {idx+1} ({knowledge_time.strftime('%b %d %H:%M')})\"\n",
     "    ax.plot(forecast_data.index, values, linewidth=1.2,\n",
     "            color=colors[idx % len(colors)], alpha=0.6, label=label)\n",
     "\n",
@@ -461,16 +472,16 @@
    "source": [
     "### Summary\n",
     "\n",
-    "- `known_time` = when the forecast was made; `valid_time` = what it predicts\n",
-    "- `overlapping=True` enables versioned storage with `known_time` tracking\n",
+    "- `knowledge_time` = when the forecast was made; `valid_time` = what it predicts\n",
+    "- `overlapping=True` enables versioned storage with `knowledge_time` tracking\n",
     "- `read()` returns the latest forecast (one value per `valid_time`)\n",
-    "- `read(versions=True)` returns all revisions with a `(known_time, valid_time)` multi-index"
+    "- `read(versions=True)` returns all revisions with a `(knowledge_time, valid_time)` multi-index"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timedb",
+   "display_name": "timedb (3.14.2)",
    "language": "python",
    "name": "python3"
   },
