--- a/examples/nb_05_api_usage.ipynb
+++ b/examples/nb_05_api_usage.ipynb
@@ -22,7 +22,18 @@
    "id": "fljom22gcx",
    "metadata": {},
    "outputs": [],
-   "source": "import urllib.request\nurllib.request.urlretrieve(\n    'https://raw.githubusercontent.com/rebase-energy/timedb/colab/examples/colab_setup.py',\n    '/tmp/colab_setup.py'\n)\nexec(open('/tmp/colab_setup.py').read())"
+   "source": [
+    "try:\n",
+    "    import google.colab\n",
+    "    import urllib.request\n",
+    "    urllib.request.urlretrieve(\n",
+    "        'https://raw.githubusercontent.com/rebase-energy/timedb/main/examples/colab_setup.py',\n",
+    "        '/tmp/colab_setup.py'\n",
+    "    )\n",
+    "    exec(open('/tmp/colab_setup.py').read())\n",
+    "except ImportError:\n",
+    "    pass  # Not running in Google Colab\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -431,7 +442,7 @@
    "source": [
     "### 4.1: Read with versions=true\n",
     "\n",
-    "Set `versions=true` to get all forecast revisions with their known_time (useful for backtesting):"
+    "Set `versions=true` to get all forecast revisions with their knowledge_time (useful for backtesting):"
    ]
   },
   {
@@ -447,7 +458,7 @@
       "✓ Retrieved 6 records with versions=true\n",
       "\n",
       "First few rows (showing forecast revisions):\n",
-      "                        known_time                valid_time  value\n",
+      "                        knowledge_time                valid_time  value\n",
       "0 2026-02-17 22:41:08.182341+00:00 2025-01-01 00:00:00+00:00   60.0\n",
       "1 2026-02-17 22:41:08.182341+00:00 2025-01-01 01:00:00+00:00   59.5\n",
       "2 2026-02-17 22:41:08.182341+00:00 2025-01-01 02:00:00+00:00   59.0\n",
@@ -475,8 +486,8 @@
     "if data_versions['count'] > 0:\n",
     "    df_versions = pd.DataFrame(data_versions['data'])\n",
     "    df_versions['valid_time'] = pd.to_datetime(df_versions['valid_time'])\n",
-    "    if 'known_time' in df_versions.columns:\n",
-    "        df_versions['known_time'] = pd.to_datetime(df_versions['known_time'])\n",
+    "    if 'knowledge_time' in df_versions.columns:\n",
+    "        df_versions['knowledge_time'] = pd.to_datetime(df_versions['knowledge_time'])\n",
     "    print(\"\\nFirst few rows (showing forecast revisions):\")\n",
     "    print(df_versions.head(10))"
    ]
@@ -488,13 +499,13 @@
    "source": [
     "## Part 5: Update Records Using the API\n",
     "\n",
-    "Updates create a new version with a new `known_time` while preserving the original for audit trail.\n",
+    "Updates create a new version with a new `knowledge_time` while preserving the original for audit trail.\n",
     "\n",
     "**Series identification**: use `name` + `labels` (like inserts) or `series_id`.\n",
     "\n",
     "**Three lookup methods for overlapping series** (mirroring the SDK):\n",
     "1. **`batch_id` + `valid_time`** — target a specific batch\n",
-    "2. **`known_time` + `valid_time`** — target an exact version (known_time uniquely links to a batch)\n",
+    "2. **`knowledge_time` + `valid_time`** — target an exact version (knowledge_time uniquely links to a batch)\n",
     "3. **Just `valid_time`** — target the latest version overall (most convenient)"
    ]
   },
@@ -521,7 +532,7 @@
    "source": [
     "forecast_labels = {\"model\": \"linear\", \"site\": \"Gotland\", \"type\": \"forecast\"}\n",
     "\n",
-    "# First, get the known_time from the inserted data (we'll need it for Method 2)\n",
+    "# First, get the knowledge_time from the inserted data (we'll need it for Method 2)\n",
     "params_versions = {\n",
     "    \"name\": \"power_forecast\",\n",
     "    \"labels\": json.dumps(forecast_labels),\n",
@@ -531,8 +542,8 @@
     "}\n",
     "response = requests.get(f\"{API_BASE_URL}/values\", params=params_versions, headers=headers)\n",
     "response.raise_for_status()\n",
-    "known_time_from_insert = response.json()[\"data\"][0][\"known_time\"]\n",
-    "print(f\"Known time from original insert: {known_time_from_insert}\\n\")\n",
+    "knowledge_time_from_insert = response.json()[\"data\"][0][\"knowledge_time\"]\n",
+    "print(f\"Known time from original insert: {knowledge_time_from_insert}\\n\")\n",
     "\n",
     "# ── Method 1: Update by batch_id ────────────────────────────────────────────\n",
     "# Target a specific batch using batch_id (stored from the insert step)\n",
@@ -550,17 +561,17 @@
     "response.raise_for_status()\n",
     "r1 = response.json()\n",
     "\n",
-    "# ── Method 2: Update by known_time ──────────────────────────────────────────\n",
-    "# Target an exact version using known_time (uniquely identifies a batch)\n",
+    "# ── Method 2: Update by knowledge_time ──────────────────────────────────────────\n",
+    "# Target an exact version using knowledge_time (uniquely identifies a batch)\n",
     "# Here we use name+labels instead of series_id\n",
     "update_2 = {\n",
     "    \"updates\": [{\n",
     "        \"name\": \"power_forecast\",\n",
     "        \"labels\": forecast_labels,\n",
-    "        \"known_time\": known_time_from_insert,\n",
+    "        \"knowledge_time\": knowledge_time_from_insert,\n",
     "        \"valid_time\": (base_time + timedelta(hours=1)).isoformat(),\n",
     "        \"value\": 80.0,\n",
-    "        \"annotation\": \"Corrected via known_time lookup\",\n",
+    "        \"annotation\": \"Corrected via knowledge_time lookup\",\n",
     "        \"changed_by\": \"analyst@example.com\",\n",
     "    }]\n",
     "}\n",
@@ -569,7 +580,7 @@
     "r2 = response.json()\n",
     "\n",
     "# ── Method 3: Update latest version (just valid_time) ───────────────────────\n",
-    "# Most convenient — targets the latest version overall, no batch_id or known_time needed\n",
+    "# Most convenient — targets the latest version overall, no batch_id or knowledge_time needed\n",
     "update_3 = {\n",
     "    \"updates\": [{\n",
     "        \"name\": \"power_forecast\",\n",
@@ -625,7 +636,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timedb",
+   "display_name": "timedb (3.14.2)",
    "language": "python",
    "name": "python3"
   },
