--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -16,7 +16,18 @@
    "id": "egcezy14db",
    "metadata": {},
    "outputs": [],
-   "source": "import urllib.request\nurllib.request.urlretrieve(\n    'https://raw.githubusercontent.com/rebase-energy/timedb/colab/examples/colab_setup.py',\n    '/tmp/colab_setup.py'\n)\nexec(open('/tmp/colab_setup.py').read())"
+   "source": [
+    "try:\n",
+    "    import google.colab\n",
+    "    import urllib.request\n",
+    "    urllib.request.urlretrieve(\n",
+    "        'https://raw.githubusercontent.com/rebase-energy/timedb/main/examples/colab_setup.py',\n",
+    "        '/tmp/colab_setup.py'\n",
+    "    )\n",
+    "    exec(open('/tmp/colab_setup.py').read())\n",
+    "except ImportError:\n",
+    "    pass  # Not running in Google Colab\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,7 +98,7 @@
     ")\n",
     "\n",
     "# See what was created\n",
-    "for s in td.series('wind_power').list_series():\n",
+    "for s in td.get_series('wind_power').list_series():\n",
     "    print(f\"  id={s['series_id']}  name={s['name']}  unit={s['unit']}  labels={s['labels']}  overlapping={s['overlapping']}\")"
    ]
   },
@@ -98,7 +109,7 @@
    "source": [
     "## 3. Insert Data\n",
     "\n",
-    "Insert time series data with a DataFrame. The `known_time` indicates when the forecast was made."
+    "Insert time series data with a DataFrame. The `knowledge_time` indicates when the forecast was made."
    ]
   },
   {
@@ -120,8 +131,8 @@
    ],
    "source": [
     "# Create forecast data\n",
-    "known_time = datetime(2025, 1, 1, 0, 0, tzinfo=timezone.utc)\n",
-    "times = [known_time + timedelta(hours=i) for i in range(24)]\n",
+    "knowledge_time = datetime(2025, 1, 1, 0, 0, tzinfo=timezone.utc)\n",
+    "times = [knowledge_time + timedelta(hours=i) for i in range(24)]\n",
     "values = [100 + 30 * math.sin((i - 6) * math.pi / 12) + i/4*random.randint(-2, 2) for i in range(24)]\n",
     "\n",
     "df = pd.DataFrame({\n",
@@ -129,10 +140,10 @@
     "    'value': values\n",
     "})\n",
     "\n",
-    "# Insert with known_time (when forecast was made)\n",
-    "td.series('wind_power').where(site='offshore_1', type='forecast').insert(\n",
+    "# Insert with knowledge_time (when forecast was made)\n",
+    "td.get_series('wind_power').where(site='offshore_1', type='forecast').insert(\n",
     "    df=df,\n",
-    "    known_time=known_time\n",
+    "    knowledge_time=knowledge_time\n",
     ")"
    ]
   },
@@ -143,7 +154,7 @@
    "source": [
     "## 4. Insert a Revised Forecast\n",
     "\n",
-    "Insert an updated forecast for the same time period with a new `known_time`."
+    "Insert an updated forecast for the same time period with a new `knowledge_time`."
    ]
   },
   {
@@ -165,7 +176,7 @@
    ],
    "source": [
     "# Create revised forecast (made 6 hours later) - same valid_time range shows how forecast changed\n",
-    "revised_known = known_time + timedelta(hours=6)\n",
+    "revised_known = knowledge_time + timedelta(hours=6)\n",
     "# revised_values = [105 + 28 * math.sin((i - 7) * math.pi / 12) for i in range(24)]  # Slightly shifted pattern\n",
     "revised_values = [100 + 30 * math.sin((i - 6) * math.pi / 12) + i/4*random.randint(-2, 2) for i in range(6, 30)]\n",
     "\n",
@@ -174,9 +185,9 @@
     "    'value': revised_values\n",
     "})\n",
     "\n",
-    "td.series('wind_power').where(site='offshore_1', type='forecast').insert(\n",
+    "td.get_series('wind_power').where(site='offshore_1', type='forecast').insert(\n",
     "    df=df_revised,\n",
-    "    known_time=revised_known\n",
+    "    knowledge_time=revised_known\n",
     ")"
    ]
   },
@@ -291,8 +302,8 @@
    ],
    "source": [
     "# Read latest forecast values\n",
-    "df_latest = td.series('wind_power').where(site='offshore_1', type='forecast').read(\n",
-    "    start_valid=known_time,\n",
+    "df_latest = td.get_series('wind_power').where(site='offshore_1', type='forecast').read(\n",
+    "    start_valid=knowledge_time,\n",
     "    end_valid=revised_known + timedelta(hours=24)\n",
     ")\n",
     "df_latest.head(10)"
@@ -318,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All revisions (multi-index: known_time, valid_time):\n"
+      "All revisions (multi-index: knowledge_time, valid_time):\n"
      ]
     },
     {
@@ -346,7 +357,7 @@
        "      <th>value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>known_time</th>\n",
+       "      <th>knowledge_time</th>\n",
        "      <th>valid_time</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -399,7 +410,7 @@
       ],
       "text/plain": [
        "                                                          value\n",
-       "known_time                valid_time                           \n",
+       "knowledge_time                valid_time                           \n",
        "2025-01-01 00:00:00+00:00 2025-01-01 00:00:00+00:00   70.000000\n",
        "                          2025-01-01 01:00:00+00:00   70.522225\n",
        "                          2025-01-01 02:00:00+00:00   73.019238\n",
@@ -419,12 +430,12 @@
    ],
    "source": [
     "# Read all forecast revisions\n",
-    "df_all = td.series('wind_power').where(site='offshore_1', type='forecast').read(\n",
-    "    start_valid=known_time,\n",
+    "df_all = td.get_series('wind_power').where(site='offshore_1', type='forecast').read(\n",
+    "    start_valid=knowledge_time,\n",
     "    end_valid=revised_known + timedelta(hours=24),\n",
     "    versions=True\n",
     ")\n",
-    "print(f\"All revisions (multi-index: known_time, valid_time):\")\n",
+    "print(f\"All revisions (multi-index: knowledge_time, valid_time):\")\n",
     "df_all.head(10)"
    ]
   },
@@ -460,8 +471,8 @@
     "\n",
     "fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(12, 8))\n",
     "\n",
-    "for known_time, data in df_all.groupby(level='known_time'):\n",
-    "    ax1.plot(data.index.get_level_values('valid_time'), data['value'].values, marker='o', label=f'Forecast at {known_time.strftime(\"%H:%M\")}')\n",
+    "for knowledge_time, data in df_all.groupby(level='knowledge_time'):\n",
+    "    ax1.plot(data.index.get_level_values('valid_time'), data['value'].values, marker='o', label=f'Forecast at {knowledge_time.strftime(\"%H:%M\")}')\n",
     "\n",
     "ax1.set_xlabel('Valid Time'), ax1.set_ylabel('Wind Power (MW)'), ax1.set_title('Forecast Revisions')\n",
     "ax1.legend(), ax1.grid(True, alpha=0.3), ax1.tick_params(axis='x', rotation=45)\n",
@@ -484,17 +495,17 @@
     "You've learned the basics of TimeDB:\n",
     "\n",
     "1. **Create series** - Define your time series with name, unit, labels, and `overlapping=True` for versioned data\n",
-    "2. **Insert data** - Store forecasts with `known_time` using `insert()`\n",
+    "2. **Insert data** - Store forecasts with `knowledge_time` using `insert()`\n",
     "3. **Read latest** - Get the most recent forecast for each time point using `read()`\n",
     "4. **Read revisions** - Access all forecast versions using `read(versions=True)` to analyze changes\n",
     "\n",
     "### Key Concepts\n",
     "\n",
     "- **`valid_time`**: The time period being forecasted\n",
-    "- **`known_time`**: When the forecast was made\n",
+    "- **`knowledge_time`**: When the forecast was made\n",
     "- **`overlapping`**: `False` (default) for immutable facts, `True` for versioned forecasts\n",
-    "- **Series Collection**: Use `.series().where()` to filter by name and labels\n",
-    "- **Forecast Revisions**: Multiple forecasts for the same `valid_time` with different `known_time`\n",
+    "- **Series Collection**: Use `.get_series().where()` to filter by name and labels\n",
+    "- **Forecast Revisions**: Multiple forecasts for the same `valid_time` with different `knowledge_time`\n",
     "\n",
     "### Next Steps\n",
     "\n",
@@ -505,7 +516,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timedb",
+   "display_name": "timedb (3.14.2)",
    "language": "python",
    "name": "python3"
   },
