--- a/examples/nb_01_write_read_pandas.ipynb
+++ b/examples/nb_01_write_read_pandas.ipynb
@@ -19,7 +19,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "import urllib.request\nurllib.request.urlretrieve(\n    'https://raw.githubusercontent.com/rebase-energy/timedb/colab/examples/colab_setup.py',\n    '/tmp/colab_setup.py'\n)\nexec(open('/tmp/colab_setup.py').read())"
+   "source": [
+    "try:\n",
+    "    import google.colab\n",
+    "    import urllib.request\n",
+    "    urllib.request.urlretrieve(\n",
+    "        'https://raw.githubusercontent.com/rebase-energy/timedb/main/examples/colab_setup.py',\n",
+    "        '/tmp/colab_setup.py'\n",
+    "    )\n",
+    "    exec(open('/tmp/colab_setup.py').read())\n",
+    "except ImportError:\n",
+    "    pass  # Not running in Google Colab\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -104,7 +115,7 @@
     "dates = [base_time + timedelta(hours=i) for i in range(24)]\n",
     "\n",
     "# Insert data for each Gotland turbine\n",
-    "gotland_wind = td.series(\"wind_power\").where(site=\"Gotland\")\n",
+    "gotland_wind = td.get_series(\"wind_power\").where(site=\"Gotland\")\n",
     "\n",
     "for turbine in gotland_wind.list_labels('turbine'):\n",
     "    df = pd.DataFrame({\n",
@@ -144,7 +155,7 @@
    ],
    "source": [
     "# list_series() returns full metadata for each matching series\n",
-    "all_wind = td.series(\"wind_power\")\n",
+    "all_wind = td.get_series(\"wind_power\")\n",
     "print(f\"All wind power series ({all_wind.count()}):\\n\")\n",
     "\n",
     "for s in all_wind.list_series():\n",
@@ -167,7 +178,7 @@
    ],
    "source": [
     "# list_labels() returns unique values for a single label dimension\n",
-    "wind = td.series(\"wind_power\")\n",
+    "wind = td.get_series(\"wind_power\")\n",
     "\n",
     "for site in wind.list_labels(\"site\"):\n",
     "    site_wind = wind.where(site=site)\n",
@@ -221,13 +232,13 @@
    ],
    "source": [
     "# Read a single series\n",
-    "df_t01 = td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").read()\n",
+    "df_t01 = td.get_series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").read()\n",
     "print(\"T01 at Gotland:\")\n",
     "print(df_t01.head())\n",
     "\n",
     "# To read multiple series, loop through them\n",
     "print(f\"\\nReading all Gotland wind turbines:\")\n",
-    "gotland_wind = td.series(\"wind_power\").where(site=\"Gotland\")\n",
+    "gotland_wind = td.get_series(\"wind_power\").where(site=\"Gotland\")\n",
     "\n",
     "dfs = {}\n",
     "for turbine in gotland_wind.list_labels('turbine'):\n",
@@ -267,7 +278,7 @@
     }
    ],
    "source": [
-    "wind = td.series(\"wind_power\")\n",
+    "wind = td.get_series(\"wind_power\")\n",
     "print(f\"All wind power: {wind.count()} series\")\n",
     "\n",
     "gotland = wind.where(site=\"Gotland\")\n",
@@ -307,20 +318,20 @@
    "source": [
     "# 1. No series found\n",
     "try:\n",
-    "    td.series(\"wind_power\").where(site=\"Mars\").read()\n",
+    "    td.get_series(\"wind_power\").where(site=\"Mars\").read()\n",
     "except ValueError as e:\n",
     "    print(f\"No match: {e}\")\n",
     "\n",
     "# 2. Wrong column names\n",
     "try:\n",
     "    df_wrong = pd.DataFrame({'valid_time': dates[:3], 'power': [1, 2, 3]})\n",
-    "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(df_wrong)\n",
+    "    td.get_series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(df_wrong)\n",
     "except ValueError as e:\n",
     "    print(f\"\\nWrong columns: {e}\")\n",
     "\n",
     "# 3. Missing time column\n",
     "try:\n",
-    "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(pd.DataFrame({'value': [1.0]}))\n",
+    "    td.get_series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(pd.DataFrame({'value': [1.0]}))\n",
     "except ValueError as e:\n",
     "    print(f\"\\nMissing column: {e}\")"
    ]
@@ -343,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timedb",
+   "display_name": "timedb (3.14.2)",
    "language": "python",
    "name": "python3"
   },
